Readme links now work

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <nav class="navLinkGroup">
                 <ul>
-                    <li><a href="README.md">README</a></li>
+                    <li><a href="README">README</a></li>
                     <li><a href="Featured">Featured</a></li>
                 </ul>
             </nav>
@@ -36,7 +36,7 @@
 
         <div class="footerLinks navLinkGroup">
             <ul class="SiteLinks">
-                <li><a href="/README.md">README</a></li>
+                <li><a href="/README">README</a></li>
             </ul>
 
         </div>
