Started making home page in html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <header class="darkBackground">
         <div class="container">
             
+            <h1>Owen Pauptit</h1>
+
+            <p1>A portfolio of all my significant programming projects</p1>
 
             <nav class="navLinkGroup">
                 <ul>
@@ -27,8 +30,22 @@
 
     <div class="container">
 
-        <h1>Home Page</h1>
+        <h2>Who am I?</h2>
 
+        <p2>I am an A level student studying Computer Science, Physics, Mathematics and Chemistry. 
+            I have found a passion for programming, and enjoy creating games as a way to learn programming languages and any respective libraries.</p2>
+        <br>
+        <p2>I started learning Python (my very first programming language in 2018) and C++ late 2019. As of March 2020, 
+            I have begun learning C# - the language that I have decided to use for my A level Computer Science coursework.</p2>
+
+            <br>
+            <br>
+
+        <div class="leftRightPair">
+            <h3 class="displayLeft">Conway's Game of Life</h3>
+            <img src="Resources/Images/CombinedImage.png" class="displayRight">
+
+        </div>
 
     </div>
 
