Added some more content

--- a/index.html
+++ b/index.html
@@ -44,8 +44,25 @@
         <div class="leftRightPair">
             <h3 class="displayLeft">Conway's Game of Life</h3>
             <img src="Resources/Images/CombinedImage.png" class="displayRight">
-
         </div>
+
+        <div class="leftRightPair">
+            <h3 class="displayRight">Dijktra's Shortest Path Algorithm</h3>
+            <img src="Resources/Images/Dijkstra.PNG" class="displayLeft">
+        </div>
+
+        <div class="leftRightPair">
+            <h3 class="displayLeft">Maze Generator</h3>
+            <img src="Resources/Images/GenerationScreenShot-shrunk.png" class="displayRight">
+        </div>
+
+        <div class="leftRightPair">
+            <h3 class="displayRight">Garden Defence</h3>
+            <img src="Resources/Images/ScreenShotForGithubPages-shrunk.png" class="displayLeft">
+        </div>
+
+        <div class="leftRightPair"></div>>
+
 
     </div>
 
