--- a/index.html
+++ b/index.html
@@ -42,7 +42,16 @@
             <br>
 
         <div class="leftRightPair">
-            <h3 class="displayLeft">Conway's Game of Life</h3>
+            <div class="displayLeft textBlock">
+                <h3>Conway's Game of Life</h3>
+                <p3>
+                    Conway's game of life is a zero player game, which takes a single input, then computes the following generations. It consists of a grid of cells which can either be alive or dead. When the next generation is calculated, the cells live or die depending on 3 rules:
+                    
+                    <ul>
+                    <li> If a living cell is surrounded by less than two other cells, it dies of underpopulation </li>
+                    <li> If a living cell is surrounded by more than three other cells, it dies of overpopulation </li>
+                    <li> - if a dead cell is surrounded by exactly three other cells, it is born</li></ul></p3>
+            </div>
             <img src="Resources/Images/CombinedImage.png" class="displayRight">
         </div>
 
