--- a/index.html
+++ b/index.html
@@ -20,8 +20,21 @@
 
             <nav class="navLinkGroup">
                 <ul>
-                    <li><a href="README">README</a></li>
-                    <li><a href="Featured">Featured</a></li>
+                    <li><a href="README">Markdown</a></li>
+                    <li><a href="#">languages</a>
+                        <ul class="dropdown darkBackground">
+                            <li><a href="#">Python</a></li>
+                            <li><a href="#">C++</a></li>
+                            <li><a href="#">C#</a></li>
+                        </ul>    
+                    </li>
+                    <li><a href="#">project types</a>
+                        <ul class="dropdown darkBackground">
+                            <li><a href="#">Game</a></li>
+                            <li><a href="#">algorithm</a></li>
+                            <li><a href="#">app</a></li>
+                        </ul>    
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -32,11 +45,17 @@
 
         <h2>Who am I?</h2>
 
-        <p2>I am an A level student studying Computer Science, Physics, Mathematics and Chemistry. 
-            I have found a passion for programming, and enjoy creating games as a way to learn programming languages and any respective libraries.</p2>
-        <br>
-        <p2>I started learning Python (my very first programming language in 2018) and C++ late 2019. As of March 2020, 
-            I have begun learning C# - the language that I have decided to use for my A level Computer Science coursework.</p2>
+        <p2>
+            I am an A level student studying Computer Science, Physics, Mathematics and Chemistry. 
+            I have found a passion for programming, and enjoy creating games as a way to learn programming languages and any respective libraries.
+                <br>
+                <br>
+            I started learning Python (my very first programming language in 2018) and C++ late 2019. As of March 2020, 
+            I have begun learning C# - the language that I have decided to use for my A level Computer Science coursework.
+                <br>
+                <br>
+            Below are some of my favourite projects.
+            </p2>
 
             <br>
             <br>
@@ -48,27 +67,64 @@
                     Conway's game of life is a zero player game, which takes a single input, then computes the following generations. It consists of a grid of cells which can either be alive or dead. When the next generation is calculated, the cells live or die depending on 3 rules:
                     
                     <ul>
-                    <li> If a living cell is surrounded by less than two other cells, it dies of underpopulation </li>
-                    <li> If a living cell is surrounded by more than three other cells, it dies of overpopulation </li>
-                    <li> - if a dead cell is surrounded by exactly three other cells, it is born</li></ul></p3>
+                        <li> If a living cell is surrounded by less than two other cells, it dies of underpopulation </li>
+                        <li> If a living cell is surrounded by more than three other cells, it dies of overpopulation </li>
+                        <li> - if a dead cell is surrounded by exactly three other cells, it is born</li>
+                    </ul>
+
+                    <a href="ProgramRepos/SFML-GameOfLife/GameOfLife.zip">Download for windows</a>
+                </p3>
             </div>
             <img src="Resources/Images/CombinedImage.png" class="displayRight">
         </div>
 
         <div class="leftRightPair">
-            <h3 class="displayRight">Dijktra's Shortest Path Algorithm</h3>
+            <div class="displayRight textBlock">
+                <h3>Dijktra's Shortest Path Algorithm</h3>
+                <p3>
+                    Dijkstra's Shortest Path Algorithm is a method of finding for finding the shortest paths between nodes in a graph. 
+                    <br><br>
+                    In this implementation, however, I use a matrix. 
+                    <br><br>
+                    The program will find the shortest path from a start point to an end point while avoiding obstcales (walls).
+                    <br><br>
+                    <a href="ProgramRepos/Console-Dijkstra/Dijkstra.zip">Download for windows</a>
+                </p3>
+            </div>
             <img src="Resources/Images/Dijkstra.PNG" class="displayLeft">
         </div>
 
         <div class="leftRightPair">
-            <h3 class="displayLeft">Maze Generator</h3>
-            <img src="Resources/Images/GenerationScreenShot-shrunk.png" class="displayRight">
+            <div class="displayLeft textBlock">
+                <h3>Maze Generator</h3>
+                <p3>
+                    This program generates a maze that the user can then use the arrow keys to navigate the player (red) and reach the finish square (green).
+                    <br><br>
+                    The generation part of the program uses a recursive backtracking algorithm to create the maze, which can be viewed when "Show Maze Generation" is selected in the set up menu. 
+                    <br><br>
+                    <a href="ProgramRepos/Pygame-MazeGenerator/MazeGenerator.zip">Download for windows</a>
+                </p3>
+            </div>
+            <img src="Resources/Images/GenerationScreenShot.png" class="displayRight">
         </div>
 
         <div class="leftRightPair">
-            <h3 class="displayRight">Garden Defence</h3>
-            <img src="Resources/Images/ScreenShotForGithubPages-shrunk.png" class="displayLeft">
+            <div class="displayRight textBlock">
+                <h3>Garden Defence</h3>
+                <p3>
+                    Garden Defence is my own tower defence strategy game where players place different gnomes into the garden to fight the attacking insects. 
+                    <br><br>
+                    Money is earned from killing enemies, and can be used to buy more gnomes or upgrade existing gnomes.               
+                    Upgrades can also be bought by clicking the existing gnome, clicking the upgrade arrow, and then choosing between increasing range or power.
+                    <br><br>
+                    <a href="ProgramRepos/Pygame-GardenDefence/GardenDefence.zip">Download for windows</a>
+                </p3>
+            </div>
+            <img src="Resources/Images/GardenDefence.png" class="displayLeft">
         </div>
+
+       
+
 
         <div class="leftRightPair"></div>>
 
