Fixed scaling for #3
Window can now be shrunk horizontally, and alignment will not mess up

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
 
             <p1>A portfolio of all my significant programming projects</p1>
 
+            <br>
+
             <nav class="navLinkGroup">
                 <ul>
                     <li><a href="README">Markdown</a></li>
                     <li><a href="#">languages</a>
                         <ul class="dropdown darkBackground">
-                            <li><a href="#">Python</a></li>
-                            <li><a href="#">C++</a></li>
-                            <li><a href="#">C#</a></li>
+                            <li><a href="PythonPage">Python</a></li>
+                            <li><a href="CppPage">C++</a></li>
+                            <li><a href="CsPage">C#</a></li>
                         </ul>    
                     </li>
                     <li><a href="#">project types</a>
