Added GIFs to home page
Project screenshots have now been replaced with gifs

--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
                     <a href="ProgramRepos/SFML-GameOfLife/GameOfLife.zip">Download for windows</a>
                 </p3>
             </div>
-            <img src="Resources/Images/CombinedImage.png" class="displayRight">
+            <div class = "displayRight">                
+                <img src="Resources/Images/GameOfLife-Random.gif" style="float: left; padding-right: 10px; padding-top: 10px;">
+                <img src="Resources/Images/GameOfLife-Max.gif" style="float: right; padding-top: 10px;">
+            </div>
         </div>
 
         <div class="leftRightPair">
@@ -93,7 +96,7 @@
                     <a href="ProgramRepos/Console-Dijkstra/Dijkstra.zip">Download for windows</a>
                 </p3>
             </div>
-            <img src="Resources/Images/Dijkstra.PNG" class="displayLeft">
+            <img src="Resources/Images/Dijkstra.gif" class="displayLeft">
         </div>
 
         <div class="leftRightPair">
@@ -107,7 +110,7 @@
                     <a href="ProgramRepos/Pygame-MazeGenerator/MazeGenerator.zip">Download for windows</a>
                 </p3>
             </div>
-            <img src="Resources/Images/GenerationScreenShot.png" class="displayRight">
+            <img src="Resources/Images/MazeGeneration.gif" class="displayRight">
         </div>
 
         <div class="leftRightPair">
@@ -137,7 +140,7 @@
 
         <div class="footerLinks navLinkGroup">
             <ul class="SiteLinks">
-                <li><a href="/README">README</a></li>
+                <li><a href="README">README</a></li>
             </ul>
 
         </div>
