Markdown page now has link to index.html
Also added home button on navbar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <nav class="navLinkGroup">
                 <ul>
-                    <li><a href="README">Markdown</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="#">languages</a>
                         <ul class="dropdown darkBackground">
                             <li><a href="PythonPage">Python</a></li>
@@ -37,6 +37,7 @@
                             <li><a href="#">app</a></li>
                         </ul>    
                     </li>
+                    <li><a href="README">Markdown</a></li>
                 </ul>
             </nav>
         </div>
