--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <li><a href="#">app</a></li>
                         </ul>    
                     </li>
-                    <li><a href="README.md">Markdown</a></li>
+                    <li><a href="home.md">Markdown</a></li>
                 </ul>
             </nav>
         </div>
