--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 
     <link href="style.css" rel="stylesheet"  type="text/css">
     <title>Owen Pauptit</title>
+    
+    <script type="text/javascript">
+<!--
+if (screen.width <= 699) {
+document.location = "home.md";
+}
+//-->
+    </script>
 
 
 </head>
