--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ document.location = "home.md";
                             <li><a href="#">app</a></li>
                         </ul>    
                     </li>
-                    <li><a href="home.md">Markdown</a></li>
+                    <li><a href="home">Markdown</a></li>
                 </ul>
             </nav>
         </div>
