--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Owen Pauptit</title>
     
     <script type="text/javascript">
-<!--
-if (screen.width <= 699) {
-document.location = "home.md";
-}
-//-->
+        <!--
+            if (screen.width <= 699) {
+                document.location = "home";
+            }
+        //-->
     </script>
 
 
