Started creating python index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="#">languages</a>
                         <ul class="dropdown darkBackground">
-                            <li><a href="PythonPage">Python</a></li>
+                            <li><a href="/python.html">Python</a></li>
                             <li><a href="CppPage">C++</a></li>
                             <li><a href="CsPage">C#</a></li>
                         </ul>    
@@ -82,7 +82,7 @@
 
 
         <div class="leftRightPair">
-            <div class="displayRight textBlock">
+            <div class="displayLeft textBlock">
                 <h3>Graph Algorithms</h3>
                 <p3>
                     After watching MIT Open CourseWare Mathematics for Computer Science lectures on Graph Theory, I decided to implement some of the algorithms I learned into a webapp. The website allows the user to create and move nodes, and construct weighted edges between nodes. The algorithms currently implemented are
@@ -96,7 +96,23 @@
                     <a href="https://owenpauptit.github.io/GraphAlgorithms/">The webapp can be found here</a>
                 </p3>
             </div>
-            <img src="Resources/Images/GraphAlgorithms.gif" class="displayLeft">
+            <img src="Resources/Images/GraphAlgorithms.gif" class="displayRight">
+        </div>
+
+        <div class="leftRightPair">
+            <div class="displayRight textBlock">
+                <h3>Chemical Molecule Drawing</h3>
+                <p3>
+                    I modified my graph algorithm code to display chemical molecules. The user can add a variety of atoms and create bonds between them. 
+                    <br/><br/>
+                    Bonds can be created by selected "Add Bond", then clicking on two different atoms. 
+                    <br/><br/>
+                    Additional bonds between the same atoms (i.e. double bonds, triple bonds etc.) can be added in the same way.
+                    <br/><br/>
+                    <a href="https://owenpauptit.github.io/MoleculeDrawing/">The webapp can be found here</a>
+                </p3>
+            </div>
+            <img src="Resources/Images/MoleculeDrawing.gif" class="displayLeft">
         </div>
 
         <div class="leftRightPair">
