Added mitosis to python page

--- a/python.html
+++ b/python.html
@@ -118,6 +118,25 @@
             <img src="Resources/Images/TerrainGeneration.gif" class="displayLeft">
         </div>
 
+        <div class="leftRightPair">
+            <div class="displayLeft textBlock">
+                <h3>Mitosis</h3>
+                <p3>Mitosis is the process of cell division. 
+                    This program begins with a single cell on a random walk.
+                    <br/><br/>
+                    When a cell is left-clicked by the mouse, it divides creating two new cells both of which have half the radius of the parent, and inherit some of the parents qualities, such as it's speed before division, and colour. 
+                    However these qualities mutate slightly creating two slightly different cells.
+                    <br/><br/>
+                    A cell will grow if it is right-clicked by the mouse, and will die if clicked with the middle mouse button. 
+                    The simulation will reset if the 'R' button is pressed on the keyboard.
+                    <br/><br/>
+                    <a href="https://github.com/owenpauptit/pygame-mitosis">Github Repository</a>
+                </p3>
+            </div>
+            <img src="Resources/Images/Mitosis.gif" class="displayRight">
+        </div>
+
+
         <div class="leftRightPair"></div>
 
 
