Updated some of the text on index page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <p2>
             I am an A level student studying Computer Science, Physics, Mathematics and Chemistry. 
-            I have found a passion for programming, and enjoy creating games as a way to learn programming languages and any respective libraries.
+            I have found a passion for programming, and have enjoyed creating games and implementing algorithms as a way to learn programming languages and any respective libraries.
                 <br>
                 <br>
             I started learning Python (my very first programming language in 2018) and C++ late 2019. As of March 2020, 
@@ -142,7 +142,7 @@
                 <p3>
                     Dijkstra's Shortest Path Algorithm is a method of finding for finding the shortest paths between nodes in a graph. 
                     <br><br>
-                    In this implementation, however, I use a matrix. 
+                    In this implementation, however, I use a matrix, where each node is two █ characters in the console. 
                     <br><br>
                     The program will find the shortest path from a start point to an end point while avoiding obstcales (walls).
                     <br><br>
