Created c# and c++ pages
Added more content to python page.
Added other project list
Sorted navbar

--- a/python.html
+++ b/python.html
@@ -43,18 +43,11 @@
                     <li><a href="#">languages</a>
                         <ul class="dropdown darkBackground">
                             <li><a href="/python.html">Python</a></li>
-                            <li><a href="CppPage">C++</a></li>
-                            <li><a href="CsPage">C#</a></li>
+                            <li><a href="/cpp.html">C++</a></li>
+                            <li><a href="/cs.html">C#</a></li>
                         </ul>    
                     </li>
-                    <li><a href="#">project types</a>
-                        <ul class="dropdown darkBackground">
-                            <li><a href="#">Game</a></li>
-                            <li><a href="#">algorithm</a></li>
-                            <li><a href="#">app</a></li>
-                        </ul>    
-                    </li>
-                    <li><a href="home">Markdown</a></li>
+                    <li><a href="home">Markdown Website</a></li>
                 </ul>
             </nav>
         </div>
@@ -136,6 +129,20 @@
             <img src="Resources/Images/Mitosis.gif" class="displayRight">
         </div>
 
+        <div class="leftRightPair">
+            <h3>Other, less noteworthy projects:</h3>
+            <ul>
+                <li><a href="https://github.com/owenpauptit/pygame-snake">Snake</a></li>
+                <li><a href="https://github.com/owenpauptit/pygame-2048">2048</a></li>
+                <li><a href="https://github.com/owenpauptit/pygame-painter">Painting Program</a></li>
+                <li><a href="https://github.com/owenpauptit/pygame-calculator">Calculator</a></li>
+                <li><a href="https://github.com/owenpauptit/pygame-rain">Rain Program</a></li>
+                <li><a href="https://github.com/owenpauptit/pygame-dropperdodgegame">Dropper Dodge Game</a></li>
+            </ul>
+        </div>
+
+
+        <div class="leftRightPair"></div>
 
         <div class="leftRightPair"></div>
 
