--- a/index.html
+++ b/index.html
@@ -174,11 +174,20 @@
             <img src="Resources/Images/GardenDefence.png" class="displayLeft">
         </div>
 
-       
-
-
-        <div class="leftRightPair"></div>>
-
+        <div class="leftRightPair">
+            <div class="displayLeft textBlock">
+                <h3>This website!</h3>
+                <p3>
+                    I have updated this website throughout my programming journey, and have thoroughly enjoyed seeing my progress.
+                    <br/><br/>
+                    I am excited to see what projects I will complete in the future!
+                </p3>
+            </div>
+            <div class="displayRight" style="height: 300px">
+                <object type="text/html" data="index.html" width="1600" height="1200" style="overflow:hidden;border:5px ridge blue; transform-origin: 100% -18%;transform: scale(0.25);">
+                </object>
+            </div>
+        </div>
 
     </div>
 
