Removed border from cool widget

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </p3>
             </div>
             <div class="displayRight" style="height: 300px">
-                <object type="text/html" data="index.html" width="1600" height="1200" style="overflow:hidden;border:5px ridge blue; transform-origin: 100% -18%;transform: scale(0.25);">
+                <object type="text/html" data="index.html" width="1600" height="1200" style="overflow:hidden;border:0px ridge black; transform-origin: 100% -18%;transform: scale(0.25);">
                 </object>
             </div>
         </div>
