--- a/cs.html
+++ b/cs.html
@@ -196,7 +196,8 @@
 
         <div class="footerLinks navLinkGroup">
             <ul class="SiteLinks">
-                <li><a href="README">README</a></li>
+                <li><a href="https://github.com/owenpauptit">Github Profile</a></li>
+                <li><a href="https://LinkedIn.com/in/owenpauptit">LinkedIn Profile</a></li>
             </ul>
 
         </div>
