--- a/python.html
+++ b/python.html
@@ -153,7 +153,8 @@
 
         <div class="footerLinks navLinkGroup">
             <ul class="SiteLinks">
-                <li><a href="README">README</a></li>
+                <li><a href="https://github.com/owenpauptit">Github Profile</a></li>
+                <li><a href="https://LinkedIn.com/in/owenpauptit">LinkedIn Profile</a></li>
             </ul>
 
         </div>
