Added some captions

--- a/webdevstuff/blazorwebapps.html
+++ b/webdevstuff/blazorwebapps.html
@@ -16,27 +16,37 @@
   </div>
 
   <div class="project">
+    <img src="../Resources/Images/PhysSim-Demo.gif">
+    <br/>
+    One aspect of <a href="https://owenpauptit.github.io/PhysSim">PhysSim</a> 
+    is a basic physics simulator.
+    The web app provided a way for secondary school students to perform simple 
+    kinematics and collision experiments online, when they aren't able to do so in school.
+  </div>
+
+  <div class="project">
         <img src="../Resources/Images/GraphAlgorithms.gif">
         <br/>
-        Graph Algorithms
+        This is a very basic web app that performs a handful of greedy algorithms on graph data structures.
+        Users can build graphs, then perform the algorithms on their graphs.
+        You can find the web app <a href="https://owenpauptit.github.io/GraphAlgorithms">here</a>.
   </div>
 
   <div class="project">
     <img src="../Resources/Images/MoleculeDrawing.gif">
     <br/>
-    Molecule Drawing
+    This is a simple web app that allows users to draw 
+    the skeletal structure of chemical molecules. 
+    I developed this for fun whilst studying Chemistry.
+    The website is live <a href="https://owenpauptit.github.io/MoleculeDrawing">here</a>.
+    
   </div>
 
-  <div class="project">
-    <img src="../Resources/Images/PhysSim-Demo.gif">
-    <br/>
-    PhysSim
-  </div>
 
-  <div class="container full" style="margin-top:10%; margin-left: 5%">
+  <div class="container full buttons" style="margin-top:10%; margin-left: 5%">
     <a href="owen.html">Home</a>
     <a href="aboutme.html">About Me</a>
-    <a href="desktopapps.html">Desktop Apps</a>
+    <a href="algorithms.html">Algorithm Visualisation</a>
     <a>Web Trinkets</a>
     <a>Full Stack</a>
     <a>Research</a>
