--- a/webdevstuff/owen.html
+++ b/webdevstuff/owen.html
@@ -32,10 +32,10 @@
     </div>
     
     
-<div class="container partial" style="margin-top:5%">
+<div class="container partial buttons" style="margin-top:5%">
   <a href="aboutme.html">About Me</a>
   <a href="blazorwebapps.html">Blazor Web Apps</a>
-  <a href="desktopapps.html">Desktop Apps</a>
+  <a href="algorithms.html">Algorithm Visualisation</a>
   <a>Web Trinkets</a>
   <a>Full Stack</a>
   <a>Research</a>
