--- a/webdevstuff/algorithms.html
+++ b/webdevstuff/algorithms.html
@@ -43,7 +43,7 @@
     <a href="owen.html">Home</a>
     <a href="aboutme.html">About Me</a>
     <a href="blazorwebapps.html">Blazor Web Apps</a>
-    <a>Web Trinkets</a>
+    <a href="jstrinkets.html">Javascript Trinkets</a>
     <a>Full Stack</a>
     <a>Research</a>
   </div>
