--- a/webdevstuff/blazorwebapps.html
+++ b/webdevstuff/blazorwebapps.html
@@ -47,7 +47,7 @@
     <a href="owen.html">Home</a>
     <a href="aboutme.html">About Me</a>
     <a href="algorithms.html">Algorithm Visualisation</a>
-    <a>Web Trinkets</a>
+    <a href="jstrinkets.html">Javascript Trinkets</a>
     <a>Full Stack</a>
     <a>Research</a>
   </div>
