--- a/webdevstuff/owen.html
+++ b/webdevstuff/owen.html
@@ -36,7 +36,7 @@
   <a href="aboutme.html">About Me</a>
   <a href="blazorwebapps.html">Blazor Web Apps</a>
   <a href="algorithms.html">Algorithm Visualisation</a>
-  <a>Web Trinkets</a>
+  <a href="jstrinkets.html">Javascript Trinkets</a>
   <a>Full Stack</a>
   <a>Research</a>
 </div>
