Added more projects to JS page

--- a/webdevstuff/jstrinkets.html
+++ b/webdevstuff/jstrinkets.html
@@ -16,6 +16,15 @@
         <div class="project large-project">
             <object type="text/html" data="WaterRipples/index.html" width="100%" height="100%"></object>
         </div>
+        <div class="project large-project">
+            <object type="text/html" data="GiftWrapping/index.html" width="100%" height="100%"></object>
+        </div>
+        <div class="project large-project">
+            <object type="text/html" data="JuliaSet/index.html" width="100%" height="100%"></object>
+        </div>
+        <div class="project large-project">
+            <object type="text/html" data="QuadTree/index.html" width="100%" height="100%"></object>
+        </div>
     </div>
 
     <div class="container full buttons" style="margin-top:10%; margin-left: 5%">
