--- a/aboutme.html
+++ b/aboutme.html
@@ -15,30 +15,28 @@
     </div>
   </div>
 
-  <div class="container partial">
-  <p>
-    Hi, I'm Owen. I'm a computer science and mathematics undergraduate at the University of Edinburgh. 
-    <br/><br/>
-    I began developing when I was about 15 years old, 
-    and since then I've taught myself a bunch of different languages as my interests varied,
-    creating many little projects as I went along - many of which you can find here!
-    <br/><br/>
-    <!-- I started as many do, recreating 2D games in pygame.
-    I then progressed into creating windows desktop applications in C++ and C#, 
-    beginning with 2D games before exploring algorithm visualisation.
-    C# opened my eyes to the possibilities of web development using ASP.NET and Blazor,
-    which is when I developed PhysSim.
-    I then decided to tune my vanilla javascript skills before beginning my degree,
-    which has since brought me to dabble all over the spectrum, including Haskell, Java, MIPS, C and matplotlib.
-    <br/><br/> -->
-    As well as problem solving, I love the outdoors. 
-    Whether that's mountain running, trad climbing, open water swimming, summitting big mountains, you name it.
+  <div class="fullpage-project" style="width: 80%;">
+    <div style="margin:0">
+      Hi, I'm Owen. I'm a computer science and mathematics undergraduate at the University of Edinburgh. 
+      <br/><br/>
+      I began developing about five years ago, 
+      and since then I've taught myself a bunch of different languages as my interests varied,
+      creating many little projects as I went along - many of which you can find here!
+      <br/><br/>
+    </div>
+    <div style="width: 45%">
+      <img src="Resources/Images/halfmara-shrunk.jpg" style="width:100%;"/></div>
+  <div style="width:40%; vertical-align: top;">
+    As well as messing around with code, I love the outdoors. 
+    I particularly enjoy running and rock climbing.
     
     <br/><br/>
     This passion has lead me to some of my fondest personal achievements
-    including finishing 10th in a 30-mile mountain marathon with over 10,000ft of climb, 
-    and reaching the top of Mount Kilimanjaro after fundraising £2820 for the local communities.
-  </p>
+    including finishing 10th in a 30-mile mountain marathon, and
+    summitting Mount Kilimanjaro after fundraising £2820 for deprived Kenyan communities.
+    <br/><br/>
+    The photo on the left is from a recent trail half marathon where I set a new personal best!
+  </div>
 </div>
     
 </div>
