--- a/physsim.html
+++ b/physsim.html
@@ -13,9 +13,10 @@
     </div>
   </div>
 
-  <div class="physsim">
+  <div class="fullpage-project">
     <img src="../Resources/Images/PhysSim-test-shrunk.gif">
-    <div>
+    <div style="
+    width: 70%;">
     During lockdown I realised that GCSE and A level students were no longer
     able to perform the experiments that are so crucial to their physics courses. 
     So I created PhysSim during lockdown in an effort to make virtual learning more engaging.
