--- a/jstrinkets.html
+++ b/jstrinkets.html
@@ -2,28 +2,28 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <object class="jsdemo" id="JAVASCRIPT" type="text/html" data="Steering/index.html"></object>
+    <object class="jsdemo" id="JAVASCRIPT" type="text/html" data="js-trinkets/Steering/index.html"></object>
     <div class="large-project-container">
         <div class="project large-project">
-            <object type="text/html" data="AutoAgents/index.html" width="100%" height="100%"></object>
+            <object type="text/html" data="js-trinkets/AutoAgents/index.html" width="100%" height="100%"></object>
         </div>
         <div class="project large-project">
-            <object type="text/html" data="RayCasting/index.html" width="100%" height="100%"></object>
+            <object type="text/html" data="js-trinkets/RayCasting/index.html" width="100%" height="100%"></object>
         </div>
         <div class="project large-project">
-            <object type="text/html" data="Metaballs/index.html" width="100%" height="100%"></object>
+            <object type="text/html" data="js-trinkets/Metaballs/index.html" width="100%" height="100%"></object>
         </div>
         <div class="project large-project">
-            <object type="text/html" data="WaterRipples/index.html" width="100%" height="100%"></object>
+            <object type="text/html" data="js-trinkets/WaterRipples/index.html" width="100%" height="100%"></object>
         </div>
         <div class="project large-project">
-            <object type="text/html" data="GiftWrapping/index.html" width="100%" height="100%"></object>
+            <object type="text/html" data="js-trinkets/GiftWrapping/index.html" width="100%" height="100%"></object>
         </div>
         <div class="project large-project">
-            <object type="text/html" data="JuliaSet/index.html" width="100%" height="100%"></object>
+            <object type="text/html" data="js-trinkets/JuliaSet/index.html" width="100%" height="100%"></object>
         </div>
         <div class="project large-project">
-            <object type="text/html" data="QuadTree/index.html" width="100%" height="100%"></object>
+            <object type="text/html" data="js-trinkets/QuadTree/index.html" width="100%" height="100%"></object>
         </div>
     </div>
 
