Removed console logs

--- a/js-trinkets/Metaballs/index.html
+++ b/js-trinkets/Metaballs/index.html
@@ -84,7 +84,7 @@
                 {
                     r /= 1.01;
                 }
-                console.log(pixelSize);
+                // console.log(pixelSize);
                 ctx.fillStyle = "hsl("+r+",100%,50%)";
                 ctx.fillRect(i,j,pixelSize,pixelSize);
             }
