--- a/js-trinkets/WaterRipples/index.html
+++ b/js-trinkets/WaterRipples/index.html
@@ -25,7 +25,7 @@
           
                 pixelSize = Math.ceil(Math.sqrt((canvas.width * canvas.height) / 2000));
 
-                console.log("HERE");
+                // console.log("HERE");
                 ripple = new Ripple(canvas.width, canvas.height, pixelSize);
                 ripple.draw(ctx);
                 //console.log("here");
