--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   
   <h2>CV</h2>
 
-  <p>You can find my long CV <a>here</a>, and a shorter CV <a>here</a>.</p>
+  <p>You can find my CV <a href="OwenPauptit_CV.pdf">here</a>.</p>
 
   <p>Links to my online profiles: <a href="https://www.linkedin.com/in/owen-pauptit/">Linked In</a>, <a href="https://scholar.google.co.uk/citations?user=dQcX5fUAAAAJ">Google Scholar</a>.</p>
 <br><hr><br><br>
