reword funding statement

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <h2>Research</h2>
 
 <p>I have just begun my PhD research into the statistical issues associated with the quantification of biodiversity,
-     funded by NERC on the E5 DTP.</p>
+     co-funded by the School of Mathematics at the University of Edinburgh and NERC, through the E5 DTP.</p>
         <p>My undergraduate project, supervised by David Sterratt and Vanda Inacio and inspired by Gelman et al (2007),
             looked at developing a Bayesian hierarchical model to investigate ethnic 
             bias in police stop and search in England and Wales. In 2025, I presented this work 
